--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,8 @@
     "expo-screen-orientation": "^9.0.8",
     "expo-splash-screen": "^0.27.0",
     "expo-status-bar": "~1.12.0",
-    "react": "^18.3.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.74.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.10.0",
