--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,39 +1,42 @@
 {
-  "name": "maticks-frontend",
+  "name": "leaderboard-app",
   "version": "1.0.0",
+  "description": "Scalable Leaderboard Application - React Native with Expo",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject",
-    "build": "expo build"
+    "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.3",
-    "@react-navigation/bottom-tabs": "^6.5.0",
-    "@react-navigation/native": "^6.1.17",
-    "@react-navigation/native-stack": "^6.10.0",
-    "axios": "^1.6.2",
-    "expo": "^51.0.0",
-    "expo-font": "^12.0.0",
-    "expo-screen-orientation": "^9.0.8",
-    "expo-splash-screen": "^0.27.0",
-    "expo-status-bar": "~1.12.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-native": "0.74.0",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-reanimated": "~3.10.0",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "~3.31.0",
-    "react-native-web": "~0.19.0"
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.13",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.0",
+    "expo": "^49.0.0",
+    "expo-constants": "~14.3.0",
+    "expo-font": "~11.4.0",
+    "expo-linking": "~5.0.2",
+    "expo-screen-orientation": "~6.0.5",
+    "lodash": "^4.17.21",
+    "react": "18.2.0",
+    "react-native": "0.72.4",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "typescript": "^5.1.3",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/webpack-config": "^19.0.0",
+    "@react-navigation/elements": "^1.3.21"
   },
   "devDependencies": {
-    "@babel/core": "~7.24.0",
-    "@types/react": "~18.2.0",
-    "typescript": "~5.3.0"
+    "@babel/core": "^7.22.0",
+    "@types/react": "^18.2.0"
   },
   "private": true
 }
