--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
+    "@expo/webpack-config": "~19.0.1",
     "@react-navigation/bottom-tabs": "^6.5.0",
+    "@react-navigation/elements": "^1.3.21",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
     "axios": "^1.6.2",
@@ -23,8 +25,7 @@
     "expo-status-bar": "~1.12.0",
     "react": "^18.3.0",
     "react-dom": "18.2.0",
-    "@expo/webpack-config": "^19.0.0",
-    "@react-navigation/elements": "^1.3.21"
+    "react-native": "0.74.5"
   },
   "devDependencies": {
     "@babel/core": "^7.22.0",
