--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
     "expo-status-bar": "~1.12.0",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.22.0",
