--- a/frontend/app.json
+++ b/frontend/app.json
@@ -3,29 +3,37 @@
     "name": "leaderboard-app",
     "slug": "leaderboard-app",
     "version": "1.0.0",
+
+    "platforms": ["ios", "android", "web"],
+
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
+
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#007AFF"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+
+    "assetBundlePatterns": ["**/*"],
+
     "ios": {
       "supportsTablet": true
     },
+
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#007AFF"
       }
     },
+
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "bundler": "metro"
     },
+
     "plugins": [
       [
         "expo-screen-orientation",
@@ -34,6 +42,7 @@
         }
       ]
     ],
+
     "extra": {
       "apiBaseUrl": "http://localhost:8080"
     }
